# SimpleVoxelEngine

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  voxelEngine.sln
depends/: CMakeLists.txt
depends/include/glad/: glad.h
depends/include/glfw/: linmath.h
depends/src/glad/: glad.c
examples/: CMakeLists.txt
examples/bwImageHeightMap/: CMakeLists.txt  GreyScaleVoxel.h  ImageSourceChunkFactory.cpp  ImageSourceChunkFactory.h  bwImageHeightMap.cpp  bwImageHeightMap.vcxproj  bwImageHeightMap.vcxproj.filters  stdafx.cpp  stdafx.h
examples/perlinLandscape/: CMakeLists.txt  PerlinNoise.cpp  PerlinNoise.h  PerlinNoiseChunkFactory.cpp  PerlinNoiseChunkFactory.h  ReadMe.txt  perlinLandscape.cpp  perlinLandscape.vcxproj  perlinLandscape.vcxproj.filters
examples/sprites/: CMakeLists.txt  TerrainChunkFactory.cpp  TerrainChunkFactory.h  TerrainVoxel.h  Voxels.h  fourHouses.vox  highTowerBlock.vox  sprites.cpp  sprites.vcxproj  sprites.vcxproj.filters  stdafx.h  supermarket.vox  towerBlock.vox
examples/voxelInvaders/: BulletMovementSpriteBehaviour.cpp  BulletMovementSpriteBehaviour.h  CMakeLists.txt  InvaderMovementSpriteBehaviour.cpp  InvaderMovementSpriteBehaviour.h  PlayerMovementBehaviour.cpp  PlayerMovementBehaviour.h  TerrainChunkFactory.cpp  TerrainVoxel.h  invader2_f0.vox  invader2_f1.vox  invaderBullet.vox  invader_f0.vox  invader_f1.vox  player.vox  playerBullet.vox  shield.vox  voxelInvaders.cpp  voxelInvaders.vcxproj  voxelInvaders.vcxproj.filters
voxelEngine/: CMakeLists.txt  README.md  voxelEngine.vcxproj  voxelEngine.vcxproj.filters
voxelEngine/include/: AABB.h  BehaviourFactory.h  Chunk.h  IAABB.h  ICamera.h  ICameraControllerInput.h  IChunk.h  IChunkFactory.h  IChunkManager.h  ILightSource.h  ISprite.h  ISpriteBehaviour.h  ISpriteCollisionSet.h  ISpriteManager.h  ISpriteVoxel.h  IVoxel.h  IVoxelContainer.h  MouseAndKeyboardCameraControllerInput.h  SimpleLight.h  SpriteCollision.h  UniformChunk.h  VoxelEngine.h  VoxelEngineException.h  color.h  worldSize.h
voxelEngine/src/: AABBTree.cpp  AABBTree.h  BehaviourFactory.cpp  Camera.cpp  Camera.h  Chunk.cpp  ChunkGeometry.cpp  ChunkGeometry.h  ChunkManager.cpp  ChunkManager.h  ChunkRenderer.cpp  ChunkRenderer.h  Controls.cpp  FrameCounter.h  ISprite.cpp  IVoxel.cpp  MouseAndKeyboardCameraControllerInput.cpp  NotImplementedException.h  NullCameraController.h  ShaderManager.cpp  ShaderManager.h  SpriteCollisionSet.h  SpriteManager.cpp  SpriteManager.h  SpriteVoxel.h  UniformChunk.cpp  VoxelContainerGeometry.cpp  VoxelContainerGeometry.h  VoxelEngine.cpp  VoxelGeometry.cpp  VoxelGeometry.h  VoxelRenderer.cpp  VoxelRenderer.h  VoxelSprite.cpp  VoxelSprite.h
voxelEngine/src/behaviours/: VoxelatedConstructionSpriteBehaviour.cpp  VoxelatedConstructionSpriteBehaviour.h
voxelEngine/src/shaders/: grass.fragmentshader  simple.vertexshader  simpleLightColor.fragmentshader  simpleLightTransform.vertexshader  simpleTransform.vertexshader
